--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,25 +1,37 @@
 ---
+import Header from '../components/common/Header.astro';
+import Footer from '../components/common/Footer.astro';
 export interface Props {
+    path: string;
     title: string;
     description: string;
+    keywords: string;
 }
 
-const { title, description } = Astro.props;
+const { title, description, keywords } = Astro.props;
 ---
 
 <!DOCTYPE html>
 <html lang="ja">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width">
-        <title>{title}</title>
-        <meta name="description" content={description}>
-    </head>
-    <body>
-        <slot />
-    </body>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width">
+    <title>{title}</title>
+    <meta name="keywords" content={keywords}>
+    <meta name="description" content={description}>
+    <meta name="format-detection" content="telephone=no">
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg">
+</head>
+<body>
+    <Header></Header>
+
+    <slot />
+
+    <Footer></Footer>
+</body>
 </html>
 <style is:global>
-    :root {}
-    html {}
 </style>
+
+<script>
+</script>
