--- a/src/pages/hoge/index.astro
+++ b/src/pages/hoge/index.astro
@@ -1,18 +1,17 @@
 ---
-import Layout from '../layouts/Layout.astro';
+import Layout from '../../layouts/Layout.astro';
 ---
 
 <Layout
-    path="/"
+    path="/hoge"
     title="__dummy__"
     description="__dummy__"
     keywords="__dummy__"
 >
     <main>
-        <h1>トップページ</h1>
+        <h1>下層ページ</h1>
     </main>
 </Layout>
 
 <style>
-    main {}
 </style>
