--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -1,12 +1,8 @@
 ---
-import Layout from '../layouts/Layout.astro';
+import Layout from "../layouts/Layout.astro";
 ---
 
-<Layout
-    title=""
-    description=""
-    keywords=""
->
+<Layout path="/404.html" title="__dummy__" description="__dummy__" keywords="__dummy__">
     <main>
         <h1>ページが存在しません。</h1>
     </main>
