レイアウトファイルの命名を変更

--- a/src/pages/hoge/index.astro
+++ b/src/pages/hoge/index.astro
@@ -1,11 +1,11 @@
 ---
-import Layout from "../../layouts/Layout.astro";
+import BaseLayout from "../../layouts/BaseLayout.astro";
 ---
 
-<Layout path="/hoge" title="__dummy__" description="__dummy__" keywords="__dummy__">
+<BaseLayout path="/hoge" title="__dummy__" description="__dummy__" keywords="__dummy__">
     <main>
         <h1>下層ページ</h1>
     </main>
-</Layout>
+</BaseLayout>
 
 <style></style>
