--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -1,9 +1,9 @@
 ---
-import Layout from "../layouts/Layout.astro";
+import BaseLayout from "../layouts/BaseLayout.astro";
 ---
 
-<Layout path="/404.html" title="__dummy__" description="__dummy__" keywords="__dummy__">
+<BaseLayout path="/404.html" title="__dummy__" description="__dummy__" keywords="__dummy__">
     <main>
         <h1>ページが存在しません。</h1>
     </main>
-</Layout>
+</BaseLayout>
