--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,12 +1,17 @@
 ---
-import Layout from "../layouts/Layout.astro";
+import BaseLayout from "../layouts/BaseLayout.astro";
 ---
 
-<Layout path="/" title="__dummy__" description="__dummy__" keywords="__dummy__">
+<BaseLayout
+    path="/"
+    title="__dummy__"
+    description="__dummy__"
+    keywords="__dummy__"
+>
     <main>
         <h1>トップページ</h1>
     </main>
-</Layout>
+</BaseLayout>
 
 <style>
     main {
