--- a/src/pages/hoge/index.astro
+++ b/src/pages/hoge/index.astro
@@ -2,7 +2,12 @@
 import BaseLayout from "../../layouts/BaseLayout.astro";
 ---
 
-<BaseLayout path="/hoge" title="__dummy__" description="__dummy__" keywords="__dummy__">
+<BaseLayout
+    path="/hoge"
+    title="__dummy__"
+    description="__dummy__"
+    keywords="__dummy__"
+>
     <main>
         <h1>下層ページ</h1>
     </main>
