--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -2,7 +2,12 @@
 import BaseLayout from "../layouts/BaseLayout.astro";
 ---
 
-<BaseLayout path="/404.html" title="__dummy__" description="__dummy__" keywords="__dummy__">
+<BaseLayout
+    path="/404.html"
+    title="__dummy__"
+    description="__dummy__"
+    keywords="__dummy__"
+>
     <main>
         <h1>ページが存在しません。</h1>
     </main>
