import エイリアスを設定

--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,7 +1,7 @@
 ---
-import BaseHead from "../components/common/BaseHead.astro";
-import Header from "../components/common/Header.astro";
-import Footer from "../components/common/Footer.astro";
+import BaseHead from "@components/common/BaseHead.astro";
+import Header from "@components/common/Header.astro";
+import Footer from "@components/common/Footer.astro";
 
 export interface Props {
     path?: string;
