--- a/src/style/global/_variables.scss
+++ b/src/style/global/_variables.scss
@@ -1,9 +1,13 @@
 @charset "utf-8";
 
+
+// ========== base ==========
+
+
 // ========== color ==========
 
 
-// ========== text color ==========
+// ========== text ==========
 
 
 // ========== gradation ==========
