--- a/src/style/global/mixin/_index.scss
+++ b/src/style/global/mixin/_index.scss
@@ -1,7 +1,7 @@
 @forward 'breakpoints';
 @forward 'centering';
-@forward 'font-size';
 @forward 'heading-content';
 @forward 'hover';
+@forward 'pxToVw';
 @forward 'reset-margin';
 @forward 'visibility-hidden';
