--- a/src/pages/hoge/index.astro
+++ b/src/pages/hoge/index.astro
@@ -2,12 +2,7 @@
 import BaseLayout from "@layouts/BaseLayout.astro";
 ---
 
-<BaseLayout
-    path="/hoge"
-    title="__dummy__"
-    description="__dummy__"
-    keywords="__dummy__"
->
+<BaseLayout title="__dummy__" description="__dummy__" ogImage="__dummy__.jpg">
     <main>
         <h1>下層ページ</h1>
     </main>
