--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,6 +5,7 @@ import BaseLayout from "@layouts/BaseLayout.astro";
 <BaseLayout title="__dummy__" description="__dummy__" ogImage="__dummy__.jpg">
     <main>
         <h1>トップページ</h1>
+        <img src="/assets/image/dummy.webp" alt="">
     </main>
 </BaseLayout>
 
