--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -48,3 +48,8 @@ const socialImageURL = new URL(ogImage ? ogImage : SITE.ogImage, SITE.urlOrigin)
     </body>
 </html>
 
+<script>
+    import BaseLayout from '@src/script/main.js'
+
+    new BaseLayout()
+</script>
