--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,3 +13,13 @@ import BaseLayout from "@layouts/BaseLayout.astro";
     main {
     }
 </style>
+
+<script>
+    class Index {
+        constructor() {
+            console.log('index')
+        }
+    }
+
+    new Index()
+</script>
