ファイル名を関数名に合わせて修正

--- a/src/style/global/mixin/_index.scss
+++ b/src/style/global/mixin/_index.scss
@@ -1,7 +1,7 @@
-@forward 'breakpoints';
 @forward 'centering';
 @forward 'heading-content';
 @forward 'hover';
+@forward 'mediaQuery';
 @forward 'pxToVw';
 @forward 'reset-margin';
 @forward 'visibility-hidden';
