--- a/src/style/global/mixin/_index.scss
+++ b/src/style/global/mixin/_index.scss
@@ -3,5 +3,6 @@
 @forward 'hover';
 @forward 'mediaQuery';
 @forward 'pxToVw';
+@forward 'rem';
 @forward 'reset-margin';
 @forward 'visibility-hidden';
