センタリング関数用に変数を定義

--- a/src/style/global/_variables.scss
+++ b/src/style/global/_variables.scss
@@ -14,6 +14,10 @@
 
 
 // ========== contents size ==========
+$content-width: 0;
+$content-margin: 0;
+$content-margin-pc: 0;
+$content-size: $content-width + ($content-margin * 2);
 
 
 // ========== break point ==========
