social 用の meta を追加

--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -38,6 +38,7 @@ const socialImageURL = new URL(ogImage ? ogImage : SITE.ogImage, SITE.urlOrigin)
         <meta property="twitter:url" content={canonicalURL} />
         <meta property="twitter:title" content={title} />
         <meta property="twitter:description" content={description} />
+        <meta property="twitter:image" content={socialImageURL} />
     </head>
     <body>
         <Header />
