--- a/src/style/global/mixin/_rem.scss
+++ b/src/style/global/mixin/_rem.scss
@@ -1,7 +1,8 @@
 @charset "utf-8";
+@use "sass:math";
 
 
 // ========== font-size ==========
 @function rem($px) {
-    @return ($px / 16px) * 1rem;
+    @return math.div($px, 16px) * 1rem;
 }
