関数を修正

--- a/src/style/global/mixin/_pxToVw.scss
+++ b/src/style/global/mixin/_pxToVw.scss
@@ -1,9 +1,18 @@
 @charset "utf-8";
 @use "sass:math";
+@use '../variables' as v;
 
 
 // ========== px to vw ==========
 // 引数の px を vw に変換して返す
-@function pxToVw($px, $contentSize) {
+@function pxToVw($px, $device) {
+    $contentSize: 0;
+
+    @if $device == 'pc' {
+        $contentSize: v.$content-width;
+    } @else if $device == 'sp' {
+        $contentSize: v.$content-width-sp;
+    }
+
     @return math.div($px, $contentSize) * 100vw;
 }
