:is を使った書き方に変更

--- a/src/style/global/mixin/_heading-content.scss
+++ b/src/style/global/mixin/_heading-content.scss
@@ -2,12 +2,7 @@
 
 // ========== 見出し用 ==========
 @mixin HeadingContent() {
-    > h1,
-    > h2,
-    > h3,
-    > h4,
-    > h5,
-    > h6 {
+    > :is(h1, h2, h3, h4, h5, h6) {
         @content;
     }
 }
