CSS 関連の基本設定を記述

--- a/src/components/common/Header.astro
+++ b/src/components/common/Header.astro
@@ -1,9 +1,26 @@
 ---
 ---
 
-<header>ヘッダー</header>
+<header class="root">
+    <div class="inner">
+        ヘッダー
+    </div>
+</header>
 
-<style>
-    header {
+<style lang="scss">
+    @use '../../style/global' as g;
+
+    // ---------- 基底要素 ----------
+    .root {
+        padding: g.rem(20px) 0;
+
+        @include g.mediaQuery() {
+            padding: g.rem(30px) 0;
+        }
+    }
+
+    // ---------- インナー要素 ----------
+    .inner {
+        @include g.centering();
     }
 </style>
