--- a/src/components/common/Footer.astro
+++ b/src/components/common/Footer.astro
@@ -1,9 +1,26 @@
 ---
 ---
 
-<footer>フッター</footer>
+<footer class="root">
+    <div class="inner">
+        フッター
+    </div>
+</footer>
 
-<style>
-    footer {
+<style lang="scss">
+    @use '../../style/global' as g;
+
+    // ---------- 基底要素 ----------
+    .root {
+        padding: g.rem(20px) 0;
+
+        @include g.mediaQuery() {
+            padding: g.rem(30px) 0;
+        }
+    }
+
+    // ---------- インナー要素 ----------
+    .inner {
+        @include g.centering();
     }
 </style>
