--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,8 +4,12 @@ import BaseLayout from "@layouts/BaseLayout.astro";
 
 <BaseLayout title="__dummy__" description="__dummy__" ogImage="__dummy__.jpg">
     <main>
-        <h1>トップページ</h1>
-        <img src="/assets/image/dummy.webp" alt="">
+        <section class="section">
+            <div class="section__inner">
+                <h1>トップページ</h1>
+                <img src="/assets/image/dummy.webp" alt=""><h1>下層ページ</h1>
+            </div>
+        </section>
     </main>
 </BaseLayout>
 
