--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -1,4 +1,9 @@
+// ---------- 基本設定 ----------
 @use 'base';
 @use 'reset';
 
+// ---------- リセット ----------
 @import '@acab/reset.css';
+
+// ---------- コンポーネント ----------
+@import 'components/section';
