Section コンポーネントを作成

--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -1,9 +1,12 @@
 ---
 import BaseLayout from "@layouts/BaseLayout.astro";
+import Section from "@src/components/common/Section.astro";
 ---
 
 <BaseLayout title="__dummy__" description="__dummy__" ogImage="__dummy__.jpg">
     <main>
-        <h1>ページが存在しません。</h1>
+        <Section>
+            <h1>ページが存在しません。</h1>
+        </Section>
     </main>
 </BaseLayout>
