--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,29 +1,19 @@
 ---
 import BaseLayout from "@layouts/BaseLayout.astro";
+import Section from "@src/components/common/Section.astro";
 ---
 
 <BaseLayout title="__dummy__" description="__dummy__" ogImage="__dummy__.jpg">
     <main>
-        <section class="section">
-            <div class="section__inner">
-                <h1>トップページ</h1>
-                <img src="/assets/image/dummy.webp" alt=""><h1>下層ページ</h1>
-            </div>
-        </section>
+        <Section>
+            <h1>トップページ</h1>
+            <img src="/assets/image/dummy.webp" alt="">
+        </Section>
     </main>
 </BaseLayout>
 
 <style>
-    main {
-    }
 </style>
 
 <script>
-    class Index {
-        constructor() {
-            console.log('index')
-        }
-    }
-
-    new Index()
 </script>
