見出しコンポーネントを作成

--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -1,12 +1,16 @@
 ---
 import BaseLayout from "@layouts/BaseLayout.astro";
 import Section from "@src/components/common/Section.astro";
+import Heading from "@src/components/parts/Heading.astro";
 ---
 
 <BaseLayout title="__dummy__" description="__dummy__" ogImage="__dummy__.jpg">
     <main>
         <Section>
-            <h1>ページが存在しません。</h1>
+            <Heading
+                level={1}
+                text="ページが存在しません。"
+            />
         </Section>
     </main>
 </BaseLayout>
