--- a/src/pages/dev/index.astro
+++ b/src/pages/dev/index.astro
@@ -2,12 +2,16 @@
 import './style.scss';
 import BaseLayout from "@layouts/BaseLayout.astro";
 import Section from "@src/components/common/Section.astro";
+import Heading from '@src/components/parts/Heading.astro';
 ---
 
 <BaseLayout title="開発用ページ" description="開発用ページ">
     <main>
         <Section>
-            <h2>開発用ページ</h2>
+            <Heading
+                level={1}
+                text="開発用ページ"
+            />
 
             <ul>
                 <li>
