--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,12 +1,16 @@
 ---
 import BaseLayout from "@layouts/BaseLayout.astro";
 import Section from "@src/components/common/Section.astro";
+import Heading from "@src/components/parts/Heading.astro";
 ---
 
 <BaseLayout title="__dummy__" description="__dummy__" ogImage="__dummy__.jpg">
     <main>
         <Section>
-            <h1>トップページ</h1>
+            <Heading
+                level={1}
+                text="トップページ"
+            />
             <img src="/assets/image/dummy.webp" alt="">
         </Section>
     </main>
