Toggle コンポーネントを作成

--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -50,7 +50,5 @@ const socialImageURL = new URL(ogImage ? ogImage : SITE.ogImage, SITE.urlOrigin)
 </html>
 
 <script>
-    import BaseLayout from '@src/script/main.js'
-
-    new BaseLayout()
+    import '@src/script/main.js'
 </script>
