--- a/src/style/_reset.scss
+++ b/src/style/_reset.scss
@@ -1,3 +1,15 @@
 @charset "utf-8";
 
 @use 'global' as g;
+
+button {
+    padding: 0;
+    background-color: transparent;
+    border: none;
+    appearance: none;
+    cursor: pointer;
+}
+
+a {
+    text-decoration: none;
+}
