記述を調整
- 不要な変数の記述を削除
- 型を修正

--- a/src/components/parts/Toggle.astro
+++ b/src/components/parts/Toggle.astro
@@ -4,7 +4,7 @@ const { rootPath } = SITE;
 
 export interface Props {
     buttonText: string;
-    bodyText:   Array<object>;
+    bodyText:   Array<string>;
 }
 
 const { buttonText, bodyText } = Astro.props;
