--- a/src/components/parts/Text.astro
+++ b/src/components/parts/Text.astro
@@ -3,7 +3,7 @@ export interface Props {
     text: Array<string>;
 }
 
-const { text, fadeIn } = Astro.props;
+const { text } = Astro.props;
 ---
 
 <div class="root">
