コンポーネントを追加（GitHub Actions のテスト）

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,6 +11,10 @@ import Heading from "@src/components/parts/Heading.astro";
                 level={1}
                 text="トップページ"
             />
+            <Heading
+                level={2}
+                text="トップページ"
+            />
         </Section>
     </main>
 </BaseLayout>
