Text コンポーネントの追加

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,6 +2,7 @@
 import BaseLayout from "@layouts/BaseLayout.astro";
 import Section from "@src/components/common/Section.astro";
 import Heading from "@src/components/parts/Heading.astro";
+import Text from '@src/components/parts/Text.astro';
 ---
 
 <BaseLayout title="__dummy__" description="__dummy__" ogImage="__dummy__.jpg">
@@ -11,9 +12,11 @@ import Heading from "@src/components/parts/Heading.astro";
                 level={1}
                 text="トップページ"
             />
-            <Heading
-                level={2}
-                text="トップページ"
+            <Text
+                text={[
+                    'テキストテキストテキスト',
+                    'テキストテキスト<sup>※</sup>テキストテキスト'
+                ]}
             />
         </Section>
     </main>
