--- a/src/components/parts/Modal.astro
+++ b/src/components/parts/Modal.astro
@@ -14,6 +14,10 @@
                 モーダルボディ
 
                 <a href="__dummy__">ダミーリンク</a>
+
+                <a href="__dummy__">ダミーリンク</a>
+
+                <a href="__dummy__">ダミーリンク</a>
             </div>
         </nav>
     </div>
