--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -5,12 +5,9 @@ import Heading from "@src/components/parts/Heading.astro";
 ---
 
 <BaseLayout title="__dummy__" description="__dummy__" ogImage="__dummy__.jpg">
-    <main>
-        <Section>
-            <Heading
-                level={1}
-                text="ページが存在しません。"
-            />
-        </Section>
-    </main>
+  <main>
+    <Section>
+      <Heading level={1} text="ページが存在しません。" />
+    </Section>
+  </main>
 </BaseLayout>
