--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,28 +2,18 @@
 import BaseLayout from "@layouts/BaseLayout.astro";
 import Section from "@src/components/common/Section.astro";
 import Heading from "@src/components/parts/Heading.astro";
-import Text from '@src/components/parts/Text.astro';
+import Text from "@src/components/parts/Text.astro";
 ---
 
 <BaseLayout title="__dummy__" description="__dummy__" ogImage="__dummy__.jpg">
-    <main>
-        <Section>
-            <Heading
-                level={1}
-                text="トップページ"
-            />
-            <Text
-                text={[
-                    'テキストテキストテキスト',
-                    'テキストテキスト<sup>※</sup>テキストテキスト'
-                ]}
-            />
-        </Section>
-    </main>
+  <main>
+    <Section>
+      <Heading level={1} text="トップページ" />
+      <Text text={["テキストテキストテキスト", "テキストテキスト<sup>※</sup>テキストテキスト"]} />
+    </Section>
+  </main>
 </BaseLayout>
 
-<style>
-</style>
+<style></style>
 
-<script>
-</script>
+<script></script>
