--- a/src/components/common/Breadcrumb.astro
+++ b/src/components/common/Breadcrumb.astro
@@ -2,7 +2,7 @@
 import { PAGELIST } from "@src/config";
 
 export interface Props {
-    index: Array<number>;
+  index: Array<number>;
 }
 
 const { index } = Astro.props;
@@ -13,56 +13,62 @@ const { index } = Astro.props;
 // 合致するページタイトルと URL を表示する
 // ==================================================================
 ---
+
 <nav class="root" aria-label="パンくずリスト">
-    <div class="inner">
-        <ul class="list">
-            {
-                index.map((item, i) => (
-                    index.length - 1 === i
-                        ? <li aria-current="page">{PAGELIST[Number(item) - 1].pageTitle}</li>
-                        : <li><a href={PAGELIST[Number(item) - 1].url}>{PAGELIST[Number(item) - 1].pageTitle}</a></li>
-                ))
-            }
-        </ul>
-    </div>
+  <div class="inner">
+    <ul class="list">
+      {
+        index.map((item, i) =>
+          index.length - 1 === i ? (
+            <li aria-current="page">{PAGELIST[Number(item) - 1].pageTitle}</li>
+          ) : (
+            <li>
+              <a href={PAGELIST[Number(item) - 1].url}>{PAGELIST[Number(item) - 1].pageTitle}</a>
+            </li>
+          )
+        )
+      }
+    </ul>
+  </div>
 </nav>
 
 <style lang="scss">
-    @use '../../style/global' as g;
+  @use "../../style/global" as g;
 
-    // ---------- 基底要素 ----------
-    .root {}
+  // ---------- 基底要素 ----------
+  .root {
+  }
 
-    // ---------- インナー要素 ----------
-    .inner {
-        @include g.centering();
-        overflow-x: auto;
-        margin-bottom: g.rem(-20px);
-        padding-bottom: g.rem(20px);
+  // ---------- インナー要素 ----------
+  .inner {
+    @include g.centering();
+    overflow-x: auto;
+    margin-bottom: g.rem(-20px);
+    padding-bottom: g.rem(20px);
+  }
+
+  // ---------- リスト要素 ----------
+  .list {
+    display: flex;
+    align-items: center;
+  }
+
+  .list > li {
+    display: flex;
+    align-items: center;
+    font-size: g.rem(12px);
+    font-weight: 500;
+    line-height: 1.733742331;
+  }
+
+  .list > li + li {
+    margin-left: 1em;
+
+    // 矢印
+    &::before {
+      content: ">";
+      display: block;
+      margin-right: 1em;
     }
-
-    // ---------- リスト要素 ----------
-    .list {
-        display: flex;
-        align-items: center;
-    }
-
-    .list > li {
-        display: flex;
-        align-items: center;
-        font-size: g.rem(12px);
-        font-weight: 500;
-        line-height: 1.733742331;
-    }
-
-    .list > li + li {
-        margin-left: 1em;
-
-        // 矢印
-        &::before {
-            content: ">";
-            display: block;
-            margin-right: 1em;
-        }
-    }
+  }
 </style>
